Translation and bugs

--- a/src/styles/_about.sass
+++ b/src/styles/_about.sass
@@ -5,6 +5,9 @@
   margin: 0 auto
   justify-content: center
 
+.about-text
+  text-align: justify
+
 @include for-phone-only 
   .content-about
     text-align: left
