--- a/src/styles/_typography.sass
+++ b/src/styles/_typography.sass
@@ -1,3 +1,5 @@
+@import '_colors'
+  
 .header-big
   font-weight: lighter
   letter-spacing: .2rem
@@ -8,6 +10,7 @@
   font-weight: lighter
   font-size: 1.2rem
   text-align: center
+  color:  $beige
 
 .input-contact
   font-size: 0.8rem
