--- a/src/styles/_work.sass
+++ b/src/styles/_work.sass
@@ -1,4 +1,5 @@
 @import '_mediaqueries'
+@import '_colors'
 
 .work
   text-align: center
@@ -17,24 +18,31 @@
     overflow: hidden
 
     img
-      width: 95%
-      max-height: 95%
+      width: 100%
       transition: transform 0.2s
 
-    &:hover img
-      filter: brightness(1.1)
+  .tooltip
+    visibility: hidden
+    position: absolute
+    top: 50%
+    left: 50%
+    width: 85%
+    transform: translate(-50%, -50%)
+    font-size: 0.9rem
+    color: $white
+    background-color: rgba(0, 0, 0, 0.3)
+    text-align: center
+    padding: 5px 10px
+    border-radius: 5px
+    white-space: nowrap
+    opacity: 0
+    transition: opacity 0.3s, visibility 0.3s
+    pointer-events: none
+    z-index: 2
 
-.image-overlay
-  position: fixed
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  background: rgba(0, 0, 0, 0.6)
-  display: flex
-  justify-content: center
-  align-items: center
-  z-index: 100
+  .image-container:hover .tooltip
+    visibility: visible
+    opacity: 1
 
 .image-popup
   position: fixed
